2005-10-31  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/CORBA/SocketRepository.java (not_reusable, gc): New methods.
	(sockets): Use hashtable. (get_socket): Rewritten.

2005-10-31  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JTable.java
	(AccessibleJTable.tableChanged): Implemented.
	(AccessibleJTable.tableRowsInserted): Implemented.
	(AccessibleJTable.tableRowsDeleted): Implemented.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(updateCurrentVisiblePath): Check whether treeModel is null.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* examples/gnu/classpath/examples/swing/Demo.java (static): Set look
	and feel before showing dialog. Clean up message text.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/PlainView.java (determineMaxLineLength): Get
	correct lenght of text.
	(drawLine): Throw AssertionError on unexpected bad location.
	(viewToModel): Likewise.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/AbstractDocument.java (dump): Actually throw
	AssertionError when constructed.
	* javax/swing/text/DefaultFormatter.java (checkValidInput): Add cause
	to AssertionError.
	* javax/swing/text/DefaultStyledDocument.java (insertUpdate):
	Likewise.
	* javax/swing/text/GlyphView.java (getPartialSpan): Likewise.
	(getText): Likewise.
	* javax/swing/text/PlainView.java (determineMaxLineLength): Likewise.
	(updateDamage): Likewise.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/java/rmi/server/UnicastServer.java (refcache): Make it a
	synchronized IdentityHashMap.

2005-10-30  Mark Wielaard  <mark@klomp.org>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java
	(GdkGraphics2D(GdkGraphics2D,int, int, int,int)): New constructor.
	(create(int,int,int,int)): Use new constructor.
	(copyArea): Implement through create() and gdkDrawDrawable().

2005-10-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* java/nio/channels/spi/AbstractSelectableChannel.java