@@ -1,3 +1,10 @@
+2005-10-31  Roman Kennke  <kennke@aicas.com>
+
+	* javax/swing/JTextField.java
+	(horizontalVisibility): New field.
+	(JTextField): Initialize horizontalVisibility field.
+	(getHorizontalVisibility): New method.
+
 2005-10-31  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* gnu/CORBA/SocketRepository.java (not_reusable, gc): New methods.
